--- a/build.xml
+++ b/build.xml
@@ -12,59 +12,33 @@
     <property name="dist_file" value="${dist_dir}/chef.zip"/>
 
     <property name="mas2j.project.file" value="chef.mas2j"/>
-    <property name="debug" value=""/> <!-- use "-debug" to run in debug mode -->
-    <property name="build.dir" value="${basedir}/bin/classes" />
     <property name="jasonJar" value="${lib_dir}/jason.jar"/>
 
     <path id="project.classpath">
         <pathelement location="${basedir}"/>
-        <!--<pathelement location="${build.dir}"/>-->
         <pathelement location="${class_dir}"/>
         <pathelement location="${jasonJar}"/>
     </path>
 
-    <!-- tasks the user can override in his/her c-build.xml script -->
-    <target name="user-init">
-    </target>
 
-    <target name="user-end">
-    </target>
-
-
-    <target name="init">
-        <mkdir dir="${build.dir}" />
-        <antcall target="user-init" />
-    </target>
-
-
-    <target name="compile" depends="init">
-        <condition property="srcdir" value="${basedir}/src/java" else="${basedir}" >
-            <available file="${basedir}/src/java" />
-        </condition>
-        <javac srcdir="${srcdir}" destdir="${build.dir}" debug="true" optimize="true" >
+    <target name="build" description="Build class files">
+        <echo>Generate class files</echo>
+        <delete dir="${class_dir}"/>
+        <mkdir dir="${class_dir}"/>
+        <!--
+        <mkdir dir="${class_dir}/org/jdhp/chef/img"/>
+        <copy todir="${class_dir}/org/jdhp/chef/img">
+            <fileset dir="${src_dir}/org/jdhp/chef/img" excludes="**/*.java"/>
+        </copy>
+        -->
+        <javac srcdir="${src_dir}" destdir="${class_dir}" debug="true" optimize="true">
             <classpath refid="project.classpath"/>
         </javac>
     </target>
 
 
-    <target name="build" description="Build class files">
-    <echo>Generate class files</echo>
-    <delete dir="${class_dir}"/>
-    <mkdir dir="${class_dir}"/>
-    <!--
-    <mkdir dir="${class_dir}/org/jdhp/chef/img"/>
-    <copy todir="${class_dir}/org/jdhp/chef/img">
-        <fileset dir="${src_dir}/org/jdhp/chef/img" excludes="**/*.java"/>
-    </copy>
-    -->
-    <!--<javac srcdir="${src_dir}" destdir="${class_dir}" classpath="${classpath}"/>-->
-    <javac srcdir="${src_dir}" destdir="${class_dir}">
-        <classpath refid="project.classpath"/>
-    </javac>
-    </target>
-
-    
-    <target name="jar" depends="compile">
+    <!-- 
+    <target name="jar" depends="build">
         <delete file="${ant.project.name}.jar" />
         <copy file="${jasonJar}" tofile="${ant.project.name}.jar" />
         <copy file="${mas2j.project.file}" tofile="default.mas2j" />
@@ -73,53 +47,36 @@
                 <include name="**/*.asl" />
                 <include name="**/*.mas2j" />
             </fileset>
-            <fileset dir="${build.dir}">
+            <fileset dir="${class_dir}">
                 <include name="**/*.class" />
             </fileset>
         </jar>
         <delete file="default.mas2j" />
     </target>
+    -->
 
     
-    <target name="jnlp" depends="jar" >
-        <mkdir dir="${basedir}/${ant.project.name}-jws"/>
-        <java classname="jason.infra.centralised.CreateJNLP"
-              failonerror="true" fork="yes" dir="${basedir}/${ant.project.name}-jws" >
-            <classpath refid="project.classpath"/>
-            <arg line="${ant.project.name} ${mas2j.project.file}"/>
-        </java>
-        <copy todir="${basedir}/${ant.project.name}-jws" failonerror="no">
-            <fileset dir="${basedir}/lib" includes="**/*.jar" />
-            <fileset dir="${basedir}" includes="${ant.project.name}.jar" />
-            <fileset dir="/users/Etu8/2865428/bin/Jason-1.3.1/src/images" includes="Jason-GMoreau-Icon.jpg" />
-        </copy>
-        <signjar jar="${basedir}/${ant.project.name}-jws/${ant.project.name}.jar" alias="jason" 
-            storepass="rbjhja" keypass="rbjhja" keystore="/users/Etu8/2865428/bin/Jason-1.3.1/src/jasonKeystore" />
-        <echo message="**" />
-        <echo message="** Java Web Start application created in directory ${ant.project.name}-jws" />
-        <echo message="** Update the codebase (in the second line of the .jnlp file)" />
-        <echo message="** with the URL where you will upload the application." />
-        <echo message="**" />
-    </target>   
-
-
-    <!--<target name="run" depends="compile" >-->
     <target name="run" depends="build" >
         <echo message="Running project ${ant.project.name}" />
         <java classname="jason.infra.centralised.RunCentralisedMAS"
               failonerror="true" fork="yes" dir="${basedir}" >
             <classpath refid="project.classpath"/>
-            <arg line="${mas2j.project.file} ${debug} "/>
+            <arg line="${mas2j.project.file}"/>
             <jvmarg line="-Xmx500M -Xss8M"/>    
         </java>
-        <antcall target="user-end" />
     </target>
 
 
-    <target name="clean" >
-        <delete failonerror="no" includeEmptyDirs="true" verbose="true">
-            <fileset dir="${basedir}" includes="**/*.class"/>
-        </delete>
+    <target name="clean" description="Remove class and doc directories and jar and dist files">
+        <echo>
+            Remove classes, docs, jar and dist files
+        </echo>
+        <delete dir="${class_dir}"/>
+        <delete dir="${doc_dir}"/>
+        <delete file="${jar_file}"/>
+        <delete file="${dist_file}"/>
+        <delete dir="${dist_project_dir}"/>
+        <delete dir="${dist_dir}"/>
     </target>
 
 </project>
